Pivot table with the differences between sex by regions. End of the assignment.

--- a/Week05/assignment05-population.ipynb
+++ b/Week05/assignment05-population.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1b7f1daf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "176b77fc",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "9791  Monaghan County Council  Number      7  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9adee02d",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9d00cd66",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5563fc27",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a1f4fcce",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "fa561d53",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "7d17cb1b",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2ba8e673",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "76007d76",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "8a42977d",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "dd1f0a42",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "8d65ac44",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "f039f349",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "994e07f8",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "4e5d2354",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "69113a80",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "8ae8f37a",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "51fc3204",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "f26d51de",
    "metadata": {},
    "outputs": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "6ec379d1",
    "metadata": {},
    "outputs": [
@@ -708,8 +708,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98de976c",
+   "metadata": {},
+   "source": [
+    "# 2.1 Create a variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "401ca315",
    "metadata": {},
    "outputs": [
@@ -729,16 +737,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cec6062f",
+   "metadata": {},
+   "source": [
+    "# 2.2 Grouping in one group"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af1583d1",
    "metadata": {},
    "source": [
     "Grouping within 5 years of that age together.\n",
-    "To group conditions: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#combining-multiple-conditional-statements"
+    "\n",
+    "To group conditions, source: \n",
+    "https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#combining-multiple-conditional-statements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "id": "77af7e56",
    "metadata": {},
    "outputs": [
@@ -775,6 +793,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a079205",
+   "metadata": {},
+   "source": [
+    "# 2.3 Get the differences by sex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b05a3065",
    "metadata": {},
    "source": [
@@ -783,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "f42a469c",
    "metadata": {},
    "outputs": [
@@ -808,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "d8167623",
    "metadata": {},
    "outputs": [
@@ -837,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "d6be3fb0",
    "metadata": {},
    "outputs": [
@@ -877,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "34f78ca8",
    "metadata": {},
    "outputs": [
@@ -908,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "09d029c3",
    "metadata": {},
    "outputs": [
@@ -957,6 +983,48 @@
     "# The differences between sex by regions \n",
     "region_diff = region_sum[genders[0]] - region_sum[genders[1]]\n",
     "print(f\"Difference between {genders[0]} and {genders[1]} by regions: {region_diff}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "c340ab74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex                                    Female    Male  Difference\n",
+      "Administrative Counties                                          \n",
+      "Carlow County Council                   31146   30822         324\n",
+      "Cavan County Council                    40644   41060        -416\n",
+      "Clare County Council                    65021   62917        2104\n",
+      "Cork City Council                      114268  109736        4532\n",
+      "Cork County Council                    181043  179109        1934\n",
+      "Donegal County Council                  84289   82795        1494\n",
+      "Dublin City Council                    300917  291796        9121\n",
+      "Dún Laoghaire Rathdown County Council  121828  112032        9796\n",
+      "Fingal County Council                  167974  162532        5442\n",
+      "Galway City Council                     44000   40414        3586\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pivot table to have a better view of the differences\n",
+    "region_diff = pd.pivot_table(df, index ='Administrative Counties', columns='Sex', values='VALUE', aggfunc='sum') \n",
+    "#aggfunc='sum' to sum the values\n",
+    "\n",
+    "region_diff['Difference'] = region_diff[genders[0]] - region_diff[genders[1]]\n",
+    "print(region_diff.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f43c075",
+   "metadata": {},
+   "source": [
+    "# End"
    ]
   }
  ],
