Read the csv file, skiiping the first rows that are not in a normal format

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -5,7 +5,7 @@
    "id": "1ec7441c",
    "metadata": {},
    "source": [
-    "# Knock airport Weather\n"
+    "# Knock airport Weather"
    ]
   },
   {
@@ -13,22 +13,287 @@
    "id": "0cca1155",
    "metadata": {},
    "source": [
-    "This program plot:\n",
+    "From the data set of the following link: https://cli.fusio.net/cli/climate_data/webdata/hly4935.csv This program plot:\n",
     "- The temperature\n",
     "- The mean temperature each day\n",
     "- The mean temperature for each month\n",
     "- The Windspeed (considering there is data missing from this column)\n",
     "- The rolling windspeed (say over 24 hours)\n",
     "- The max windspeed for each day\n",
-    "- The monthly mean of the daily max windspeeds (yer I am being nasty here)\n",
-    "From the data set of the following link: https://cli.fusio.net/cli/climate_data/webdata/hly4935.csv\n",
-    "\n"
+    "- The monthly mean of the daily max windspeeds (yer I am being nasty here)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9a3818e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import pandas library\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cfafd884",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MAXYEAR', 'MINYEAR', 'UTC', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'date', 'datetime', 'datetime_CAPI', 'time', 'timedelta', 'timezone', 'tzinfo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "print(dir(dt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5180012",
+   "metadata": {},
+   "source": [
+    "As the csv file has 23 lines that are not common in a csv file and this cause issues, we can 'ignore' them, with the \"skip\" method:\n",
+    "Source: https://www.geeksforgeeks.org/python/how-to-skip-rows-while-reading-csv-file-using-pandas/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ce816111",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tanya\\AppData\\Local\\Temp\\ipykernel_2684\\2468379064.py:3: DtypeWarning: Columns (2,10,12,14,15,16,18,19,20) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(url, skiprows=range(0, 23))  # don't take in consideration the first 20 lines\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>ind</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>ind.1</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>ind.2</th>\n",
+       "      <th>wetb</th>\n",
+       "      <th>dewpt</th>\n",
+       "      <th>vappr</th>\n",
+       "      <th>rhum</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ind.3</th>\n",
+       "      <th>wdsp</th>\n",
+       "      <th>ind.4</th>\n",
+       "      <th>wddir</th>\n",
+       "      <th>ww</th>\n",
+       "      <th>w</th>\n",
+       "      <th>sun</th>\n",
+       "      <th>vis</th>\n",
+       "      <th>clht</th>\n",
+       "      <th>clamt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10-apr-1996 14:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31-jul-1996 08:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31-jul-1996 09:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>32</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31-jul-1996 10:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28000</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31-jul-1996 11:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>40</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                date  ind rain  ind.1  temp  ind.2  wetb  dewpt  vappr  rhum  \\\n",
+       "0  10-apr-1996 14:00    0  0.0      0  11.5      0   8.1    3.9    0.0     0   \n",
+       "1  31-jul-1996 08:00    0  0.0      0  11.5      0  11.1   10.7    0.0     0   \n",
+       "2  31-jul-1996 09:00    0  0.0      0  11.6      0  10.7    9.8    0.0     0   \n",
+       "3  31-jul-1996 10:00    0  0.0      0  12.9      0  11.3    9.8    0.0     0   \n",
+       "4  31-jul-1996 11:00    0  0.0      0  14.5      0  10.8    7.0    0.0     0   \n",
+       "\n",
+       "   ... ind.3  wdsp ind.4  wddir  ww   w  sun    vis clht clamt  \n",
+       "0  ...     0     0     0      0  25  81  0.0  35000   32     5  \n",
+       "1  ...     0     0     0      0  25  82  0.0  40000   45     5  \n",
+       "2  ...     0     0     0      0  80  81  0.0   8000   32     7  \n",
+       "3  ...     0     0     0      0  25  82  0.0  28000   35     6  \n",
+       "4  ...     0     0     0      0   2  11  0.0  40000   40     6  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://cli.fusio.net/cli/climate_data/webdata/hly4935.csv\"\n",
+    "\n",
+    "df = pd.read_csv(url, skiprows=range(0, 23))  # don't take in consideration the first 20 lines\n",
+    "df.head()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
