Changing 'date' column to a datetime format

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9a3818e1",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "cfafd884",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "ce816111",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,6 +274,42 @@
     "\n",
     "df = pd.read_csv(url, skiprows=range(0, 23))  # don't take in consideration the first 20 lines\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21da9ea2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 date  ind rain  ind.1  temp  ind.2  wetb  dewpt  vappr  rhum  \\\n",
+      "0 1996-04-10 14:00:00    0  0.0      0  11.5      0   8.1    3.9    0.0     0   \n",
+      "1 1996-07-31 08:00:00    0  0.0      0  11.5      0  11.1   10.7    0.0     0   \n",
+      "2 1996-07-31 09:00:00    0  0.0      0  11.6      0  10.7    9.8    0.0     0   \n",
+      "3 1996-07-31 10:00:00    0  0.0      0  12.9      0  11.3    9.8    0.0     0   \n",
+      "4 1996-07-31 11:00:00    0  0.0      0  14.5      0  10.8    7.0    0.0     0   \n",
+      "\n",
+      "   ... ind.3  wdsp ind.4  wddir  ww   w  sun    vis clht clamt  \n",
+      "0  ...     0     0     0      0  25  81  0.0  35000   32     5  \n",
+      "1  ...     0     0     0      0  25  82  0.0  40000   45     5  \n",
+      "2  ...     0     0     0      0  80  81  0.0   8000   32     7  \n",
+      "3  ...     0     0     0      0  25  82  0.0  28000   35     6  \n",
+      "4  ...     0     0     0      0   2  11  0.0  40000   40     6  \n",
+      "\n",
+      "[5 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As date is in text format, we need to convert it to datetime format\n",
+    "# format is day/month/year\n",
+    "# source: https://pandas.pydata.org/docs/reference/api/pandas.to_datetime.html\n",
+    "df['date'] = pd.to_datetime(df['date'], format='%d/%m/%Y')\n",
+    "print(df.head())"
    ]
   }
  ],
