Calculate the monthly mean of tempeture

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -374,12 +374,12 @@
    "metadata": {},
    "source": [
     "## Plot the mean temperature each day\n",
-    "Calculate daily mean temperature, for this we need to calculate the mean."
+    "To plot we need to calculate daily mean."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "986df46b",
    "metadata": {},
    "outputs": [
@@ -404,6 +404,7 @@
     }
    ],
    "source": [
+    "# Calculate daily mean temperature\n",
     "df_daily = df.groupby(df['date'].dt.date)['temp'].mean()\n",
     "print(df_daily)"
    ]
@@ -433,6 +434,47 @@
     "plt.ylabel('Daily Mean Temperature (°C)')\n",
     "plt.title('Daily Mean Temperature Over Time')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e64482b",
+   "metadata": {},
+   "source": [
+    "## Plot the mean temperature for each month\n",
+    "To plot we need to calculate monthly mean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "551971aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date\n",
+      "1996-04    11.500000\n",
+      "1996-07    12.650000\n",
+      "1996-08    12.946909\n",
+      "1996-09    12.174306\n",
+      "1996-10     9.614113\n",
+      "             ...    \n",
+      "2025-08    15.178495\n",
+      "2025-09    11.368056\n",
+      "2025-10     9.900134\n",
+      "2025-11     7.153889\n",
+      "2025-12     8.400000\n",
+      "Freq: M, Name: temp, Length: 355, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the monthly mean temperature\n",
+    "df_monthly = df.groupby(df['date'].dt.to_period('M'))['temp'].mean()\n",
+    "print(df_monthly)"
    ]
   }
  ],
