Ignore the missing values in windspeed column

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -503,6 +503,57 @@
     "plt.title('Monthly Mean Temperature Over Time')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e42d8ed3",
+   "metadata": {},
+   "source": [
+    "## Plot The Windspeed \n",
+    "Considering there is missing data in the windspeed column, the appropriate thing to do before the plot is to use understand we can do/treat the missing data.\n",
+    "- We can delete the missing rows,\n",
+    "- To add some values in that missing data, like the an avarage or maybe to put 0\n",
+    "- Ignore the missing values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "948475d3",
+   "metadata": {},
+   "source": [
+    "We will ignore the missing values, to not 'contaminate' the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c313f16c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          0.0\n",
+      "1          0.0\n",
+      "2          0.0\n",
+      "3          0.0\n",
+      "4          0.0\n",
+      "          ... \n",
+      "257149    17.0\n",
+      "257150    14.0\n",
+      "257151    10.0\n",
+      "257152     6.0\n",
+      "257153     8.0\n",
+      "Name: wdsp, Length: 257154, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert 'wdsp' column to numeric, forcing errors to NaN\n",
+    "df['wdsp'] = pd.to_numeric(df['wdsp'], errors='coerce')\n",
+    "print(df['wdsp'])"
+   ]
   }
  ],
  "metadata": {
