Column 'data' sorted by date

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -581,6 +581,30 @@
     "plt.title('Wind Speed Over Time')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d5ca563",
+   "metadata": {},
+   "source": [
+    "## The rolling windspeed (over 24 hours)\n",
+    "To plot the rolling windspeed over 24 hours, we first need to ensure the data is sorted by date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "46c2593e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values('date')\n",
+    "df['date'] = pd.to_datetime(df['date'], dayfirst=True)\n",
+    "df = df.sort_values('date')\n",
+    "\n",
+    "# Convert 'wdsp' column to numeric, forcing errors to NaN\n",
+    "df['wdsp'] = pd.to_numeric(df['wdsp'], errors='coerce')"
+   ]
   }
  ],
  "metadata": {
