Calculating rolling windspeed over 24 hours

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -605,6 +605,33 @@
     "# Convert 'wdsp' column to numeric, forcing errors to NaN\n",
     "df['wdsp'] = pd.to_numeric(df['wdsp'], errors='coerce')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "538f140a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date\n",
+      "1996-04-10 14:00:00   NaN\n",
+      "1996-07-31 08:00:00   NaN\n",
+      "1996-07-31 09:00:00   NaN\n",
+      "1996-07-31 10:00:00   NaN\n",
+      "1996-07-31 11:00:00   NaN\n",
+      "Name: wdsp, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculating rolling windspeed over 24 hours\n",
+    "df.set_index('date', inplace=True)\n",
+    "rolling_windspeed = df['wdsp'].rolling(window=24).mean()\n",
+    "print(rolling_windspeed.head())"
+   ]
   }
  ],
  "metadata": {
