Create a column with date only (without time) - for windspeed per day

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -659,6 +659,49 @@
     "plt.title('24-Hour Rolling Windspeed')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ffc6cfe",
+   "metadata": {},
+   "source": [
+    "## Plot the max windspeed for each day\n",
+    "We need calculate the mean of daily max windspeeds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ccddf3",
+   "metadata": {},
+   "source": [
+    "We need to create a column only with the date, without the hours and then to group per day and get the mac windspeed per day."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fdf9f951",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date\n",
+      "1996-04-10 14:00:00    1996-04-10\n",
+      "1996-07-31 08:00:00    1996-07-31\n",
+      "1996-07-31 09:00:00    1996-07-31\n",
+      "1996-07-31 10:00:00    1996-07-31\n",
+      "1996-07-31 11:00:00    1996-07-31\n",
+      "Name: date_only, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a column with date only (without time)\n",
+    "df['date_only'] = df.index.date\n",
+    "print(df['date_only'].head())"
+   ]
   }
  ],
  "metadata": {
