group by date only and calculate max windspeed

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -666,15 +666,7 @@
    "metadata": {},
    "source": [
     "## Plot the max windspeed for each day\n",
-    "We need calculate the mean of daily max windspeeds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26ccddf3",
-   "metadata": {},
-   "source": [
-    "We need to create a column only with the date, without the hours and then to group per day and get the mac windspeed per day."
+    "First we need to create a column only with the date, without the hours and then to group per day and get the max windspeed per day."
    ]
   },
   {
@@ -701,6 +693,17 @@
     "# Create a column with date only (without time)\n",
     "df['date_only'] = df.index.date\n",
     "print(df['date_only'].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0c72322d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group by date only and calculate max windspeed\n",
+    "daily_mean_windspeed = df.groupby('date_only')['wdsp'].max()"
    ]
   }
  ],
