Calculate the monthly mean of daily max windspeed - using reset_index

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -729,6 +729,27 @@
     "plt.title('Daily Max Windspeed Over Time')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8958c567",
+   "metadata": {},
+   "source": [
+    "## The monthly mean of the daily max windspeeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "d9d74438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate monthly mean of daily max windspeed\n",
+    "daily_max_windspeed = df.groupby('date_only')['wdsp'].max().reset_index()\n",
+    "# reset index to have 'date_only' as a column\n",
+    "# Source: https://www.w3schools.com/python/pandas/ref_df_reset_index.asp"
+   ]
   }
  ],
  "metadata": {
