Create a colum 'month' for group by month

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -750,6 +750,17 @@
     "# reset index to have 'date_only' as a column\n",
     "# Source: https://www.w3schools.com/python/pandas/ref_df_reset_index.asp"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e9bcce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a column 'month' for grouping by month\n",
+    "daily_max_windspeed['month'] = pd.to_datetime(daily_max_windspeed['date_only']).dt.to_period('M')"
+   ]
   }
  ],
  "metadata": {
