Calculate monthly mean of daily max windspeed

--- a/Week06/assignment_6_weather.ipynb
+++ b/Week06/assignment_6_weather.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "id": "9a3818e1",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "id": "0818014d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "id": "cfafd884",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "id": "ce816111",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "id": "21da9ea2",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "id": "72cf9171",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "id": "986df46b",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "id": "90635bb7",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "id": "551971aa",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "id": "45ff8279",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "id": "c313f16c",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "id": "ca234aa9",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "46c2593e",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "id": "538f140a",
    "metadata": {},
    "outputs": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "id": "b2a1b74d",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "id": "fdf9f951",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "id": "0c72322d",
    "metadata": {},
    "outputs": [],
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "id": "66f73596",
    "metadata": {},
    "outputs": [
@@ -740,26 +740,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "id": "d9d74438",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    date_only  wdsp\n",
+      "0  1996-04-10   0.0\n",
+      "1  1996-07-31   0.0\n",
+      "2  1996-08-01  14.0\n",
+      "3  1996-08-02  13.0\n",
+      "4  1996-08-03  10.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate monthly mean of daily max windspeed\n",
-    "daily_max_windspeed = df.groupby('date_only')['wdsp'].max().reset_index()\n",
     "# reset index to have 'date_only' as a column\n",
-    "# Source: https://www.w3schools.com/python/pandas/ref_df_reset_index.asp"
+    "# Source: https://www.w3schools.com/python/pandas/ref_df_reset_index.asp\n",
+    "daily_max_windspeed = df.groupby('date_only')['wdsp'].max().reset_index()\n",
+    "print(daily_max_windspeed.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "9e9bcce2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    date_only  wdsp    month\n",
+      "0  1996-04-10   0.0  1996-04\n",
+      "1  1996-07-31   0.0  1996-07\n",
+      "2  1996-08-01  14.0  1996-08\n",
+      "3  1996-08-02  13.0  1996-08\n",
+      "4  1996-08-03  10.0  1996-08\n"
+     ]
+    }
+   ],
    "source": [
     "# create a column 'month' for grouping by month\n",
-    "daily_max_windspeed['month'] = pd.to_datetime(daily_max_windspeed['date_only']).dt.to_period('M')"
+    "daily_max_windspeed['month'] = pd.to_datetime(daily_max_windspeed['date_only']).dt.to_period('M')\n",
+    "print(daily_max_windspeed.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "e89258d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "month\n",
+      "1996-04     0.000000\n",
+      "1996-07     0.000000\n",
+      "1996-08    12.516129\n",
+      "1996-09    12.266667\n",
+      "1996-10    18.193548\n",
+      "             ...    \n",
+      "2025-08    13.258065\n",
+      "2025-09    15.000000\n",
+      "2025-10    15.354839\n",
+      "2025-11    15.400000\n",
+      "2025-12     8.000000\n",
+      "Freq: M, Name: wdsp, Length: 355, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate monthly mean of daily max windspeed\n",
+    "monthly_mean_max_windspeed = daily_max_windspeed.groupby('month')['wdsp'].mean()\n",
+    "print(monthly_mean_max_windspeed)"
    ]
   }
  ],
